try to fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
-    position: relative;
+    overflow-x:hidden;
 }
 
 section
